--- a/Parcels, Paths and Patches.html
+++ b/Parcels, Paths and Patches.html
@@ -174,6 +174,27 @@
 			return [x, y];
 		}
 
+		function hasPath(b, i)
+		{
+			return b.charCodeAt(i) - 65 !== 0	|| (i % w > 0	&& ((b.charCodeAt(i-1)-65) & 1) !== 0)
+				|| (i >= w	&& ((b.charCodeAt(i-w)-65) & 2) !== 0);
+		}
+
+		function pathFillsGrid(b, exc)
+		{
+			let good = Array(w*h).fill(false);
+			if (exc)
+				for (let ex of exc)
+					good[ex] = true;
+			for (let i = 0; i < w*h; i++)
+			{
+				let v = b.charCodeAt(i) - 65;
+				if (i % w < w-1	&& (v & 1)) { good[i] = true; good[i + 1] = true; }
+				if (i < w*(h-1)	&& (v & 2)) { good[i] = true; good[i + w] = true; }
+			}
+			return !good.includes(false);
+		}
+
 		function make(id, elemName, attrs, content, parent)
 		{
 			let force = elemName.startsWith('*');
@@ -367,7 +388,6 @@
 							break;
 
 						case 3:
-							console.log(sc.n.map((n, ix) => followPathI(n, sc.m[s.m[ix]])));
 							for (let i = 0; i < sc.n.length; i++)
 							{
 								let a = 'M', q = '', al = [];
@@ -492,6 +512,13 @@
 									sgm.push({ c: [i, i+w], d1: 0, d2: 2 });
 							}
 							mk('loop', 'path', { fill: 'none', stroke: 'hsl(120, 60%, 75%)', 'stroke-width': 15, '*d': joinSegments(sgm, c => `${sqxx(c%w)+50} ${sqyy((c/w)|0)+50}`) });
+							if (sc.subtype === 1)
+							{
+								for (let ma of s.m)
+									mk(`dot-${ma}`, 'circle', { fill: 'hsl(120, 60%, 75%)', cx: sqx(ma)+50, cy: sqy(ma)+50, r: 20 });
+								for (let d of s.d)
+									mk(`dr-${d}`, 'use', { href: '#drumkit', x: sqx(d), y: sqy(d), width: 100, height: 100 });
+							}
 							if (sc.n)
 								for (let i = 0; i < sc.n.length; i++)
 									await makeNunWithLetter(i, `n-${i}-t`, sqx(sc.n[i]), sqy(sc.n[i]), sc.l[i]);
@@ -551,7 +578,9 @@
 
 					case 42:
 						setupGridInput((x, y) => x >= 0 && x < w && y >= 0 && y < h);
-						showCheckBtn = sc.a ? !s.b.includes('A') : true;
+						showCheckBtn =	sc.subtype === 0 ? pathFillsGrid(s.b) :
+							sc.subtype === 1 ? pathFillsGrid(s.b, [...sc.n, ...s.d]) :
+							false;
 						break;
 				}
 
@@ -927,6 +956,21 @@
 							}
 							break;
 
+						case 42:
+							if (sc.subtype === 1)
+							{
+								let sn = true, ni = s.n.indexOf('?');
+								if (ni === -1) { sn = false; ni = s.d.indexOf('?'); }
+								if (sn && ni >= 0 && ((m = /^Digit([0-9])$/.exec(keycombo)) || (m = /^Numpad([0-9])$/.exec(keycombo))))
+									s.n = setChar(s.n, ni, m[1]);
+								else if (!sn && ni >= 0 && (m = /^Arrow(Up|Right|Down|Left)$/.exec(keycombo)))
+								{
+									s.r = setChar(s.r, ni, `${["Up", "Right", "Down", "Left"].indexOf(m[1])}`);
+									changes = true;
+								}
+							}
+							break;
+
 						case 47:
 							if (s.b.length > 0 && (keycombo === 'Enter' || keycombo === 'NumpadEnter'))
 								return checkBtnPress();
@@ -984,13 +1028,41 @@
 					case 26:
 						if (ni >= 0 && (btns & 4)) { sc.v = JSON.parse(last); sc.v.l = setChar(sc.v.l, ni, '?'); }
 						break;
+					case 42:
+						switch (sc.subtype)
+						{
+							case 1:
+								if (btns & 1)
+								{
+									if (s.d.includes(i)) s.d.splice(s.d.indexOf(i), 1);
+									else
+									{
+										s.d.push(i);
+										s.d.sort((a, b) => a-b);
+										if (s.m.includes(i))
+										{
+											s.m.splice(s.m.indexOf(i), 1);
+											s.m.sort((a, b) => a-b);
+										}
+									}
+									changes = true;
+								}
+								if (ni >= 0 && (btns & 4))
+								{
+									sc.v = JSON.parse(last);
+									sc.v.n = setChar(sc.v.n, ni, '?');
+									sc.v.r = setChar(sc.v.r, ni, '?');
+								}
+								break;
+						}
+						break;
 				}
 				maybeUpdateView(changes);
 			}
 			function startDrag(x, y, e, btns)
 			{
 				//console.log('startDrag', arguments);
-				let sc = state.steps[state.step], s = sc.v, i = e ?? x + w*y, ni;
+				let sc = state.steps[state.step], s = sc.v, changes = false, i = e ?? x + w*y, ni;
 				switch (sc.type)
 				{
 					case 0: if (btns & 1) s.v = s.i === (s.i = i) !== s.v; break;
@@ -1026,7 +1098,13 @@
 							}
 						}
 						break;
+
+					case 42:
+						if (sc.subtype === 1 && (btns & 2))
+							mouseM = !s.m.includes(i);
+						break;
 				}
+				maybeUpdateView(changes);
 			}
 			function drag(origX, origY, origE, fromX, fromY, fromE, x, y, e, btns)
 			{
@@ -1054,23 +1132,36 @@
 						break;
 
 					case 42:
-						let dir =	fromX === x	&& fromY === y+1	? 0 :
-							fromX === x-1	&& fromY === y	? 1 :
-							fromX === x	&& fromY === y-1	? 2 :
-							fromX === x+1	&& fromY === y	? 3 : null;
-						if (dir === null)
-							break;
+						if (btns & 1)
+						{
+							let dir =	fromX === x	&& fromY === y+1	? 0 :
+								fromX === x-1	&& fromY === y	? 1 :
+								fromX === x	&& fromY === y-1	? 2 :
+								fromX === x+1	&& fromY === y	? 3 : null;
+							if (dir !== null && !(sc.subtype === 1 && (sc.n.includes(i) || sc.n.includes(fi) || s.d.includes(i) || s.d.includes(fi))))
+							{
+								let ix = dir === 0 || dir === 3 ? i : fi;
+								let bit = dir === 0 || dir === 2 ? 2 : 1;
+								let val = s.b.charCodeAt(ix)-65;
 
-						let ix = dir === 0 || dir === 3 ? i : fi;
-						let bit = dir === 0 || dir === 2 ? 2 : 1;
-						let val = s.b.charCodeAt(ix)-65;
+								if (mouseI === null)
+									mouseI = !(val & bit);
 
-						if (mouseI === null)
-							mouseI = !(val & bit);
-
-						val = (val & ~bit) | (mouseI ? bit : 0);
-						s.b = setChar(s.b, ix, String.fromCharCode(val+65));
-						changes = true;
+								if ((val & bit) !== (mouseI ? bit : 0))
+								{
+									val = (val & ~bit) | (mouseI ? bit : 0);
+									s.b = setChar(s.b, ix, String.fromCharCode(val+65));
+									if (sc.subtype === 1)
+										s.m = s.m.filter(m => !hasPath(s.b, m));
+									changes = true;
+								}
+							}
+						}
+						if (sc.subtype === 1 && (btns & 2) && !sc.n.includes(i) && !s.d.includes(i) && !hasPath(s.b, i))
+						{
+							if (mouseM && !s.m.includes(i)) { s.m.push(i); s.m.sort((a, b) => a-b); changes = true; }
+							else if (!mouseM && s.m.includes(i)) { s.m.splice(s.m.indexOf(i), 1); changes = true; }
+						}
 						break;
 				}
 				maybeUpdateView(changes);
@@ -1082,12 +1173,23 @@
 				switch (sc.type)
 				{
 					case 2:
+						for (let nu of document.querySelectorAll('.nun'))
+							nu.classList.remove('sel');
+						changes = i !== oi;
+						break;
+
 					case 3:
 						for (let nu of document.querySelectorAll('.nun'))
 							nu.classList.remove('sel');
 						for (let tg of Array.from(document.querySelectorAll('.tg')))
 							tg.classList.remove('tg');
-						changes = sc.type === 2 ? i !== oi : mouseI !== null && s.m[mouseI] !== mouseM;
+						changes = mouseI !== null && s.m[mouseI] !== mouseM;
+						// canonicalize
+						for (let j1 = 0; j1 < s.m.length; j1++)
+							if (s.m[j1] !== null)
+								for (let j2 = j1+1; j2 < s.m.length; j2++)
+									if (s.m[j2] !== null && s.m[j2] < s.m[j1] && sc.m[s.m[j1]] === sc.m[s.m[j2]])
+										[s.m[j1], s.m[j2]] = [s.m[j2], s.m[j1]];
 						break;
 				}
 				mouseI = mouseM = null;
