--- a/Parcels, Paths and Patches.html
+++ b/Parcels, Paths and Patches.html
@@ -517,7 +517,7 @@
 								for (let ma of s.m)
 									mk(`dot-${ma}`, 'circle', { fill: 'hsl(120, 60%, 75%)', cx: sqx(ma)+50, cy: sqy(ma)+50, r: 20 });
 								for (let d of s.d)
-									mk(`dr-${d}`, 'use', { href: '#drumkit', x: sqx(d), y: sqy(d), width: 100, height: 100 });
+									mk(`dr-${d}`, 'use', { href: '#drumkit', '*transform': `translate(${sqx(d)} ${sqy(d)})` });
 							}
 							if (sc.n)
 								for (let i = 0; i < sc.n.length; i++)
@@ -1380,6 +1380,83 @@
 					<path fill="#8b5d38"	d="m 262.20117,2995.8669 c 0.14272,10.8563 0.37065,28.2286 0.39453,30.4258 0.1,7.2 2.19961,14.4 1.59961,21.5 -197.999803,264.9997 -52.99984,497.7999 101,469 64.49994,-12 128.90002,-74.8001 145,-163 8.39999,4.5 16.80001,9.0011 26,11.7011 44.09996,13.2 80.8008,-5.0016 98.30078,-43.1015 11.49999,-24.8 16.19999,-64.0001 6,-103 -16.99998,-63.3 -68.20005,-120.2001 -120,-160 -1.55612,-1.6098 -1.99142,-29.4463 -2.03906,-60.4278 z" />
 					<path fill='#f4cfac'	d="m 333.46484,2996.7282 c 0.17142,14.7592 0.34854,26.8472 0.53125,28.7656 33.79997,3.9 106.00001,10.4993 115,11.1993 0.0658,-1.974 0.10429,-22.1796 0.14844,-38.5664 z m -15.76953,98.0645 c -48.69995,65.9999 -85.2996,147.7001 -78.09961,229 8.99999,98.4999 88.40007,166.2003 159,99.9004 56.89995,-54 46.90078,-131.8001 45.80078,-156 -0.5,-10.9 3.49923,-22.1993 11.69922,-29.6993 17.49999,-15.8999 45.69923,-11.0007 56.69922,11.6993 3.5,6.3 5.5004,13.3996 9.40039,19.5996 6.3,10.1 14.7004,18.9996 24.90039,25.0996 6,3.6 13.00079,7.2011 20.30078,5.7012 3.2,-2.8 4.70001,-7.0001 6,-11 10.59999,-32.8 -2.3008,-68.6997 -21.30078,-97.5997 -19.89998,-30.2999 -46.59963,-55.6004 -75.09961,-77.9003 -2.99999,-2.3 -6.10117,-5.3997 -10.20117,-5.0997 -18.99998,-1.7 -142.10001,-13.3 -149,-13.5 z" />
 				</g>
+			</g>
+			<g id='drumkit' stroke-width=".93" transform="matrix(1.07 0 0 1.07066 -3.14 -1.82)">
+				<path fill="#554223" d="M34.93-30.07h1.2v-16.55H55.7v-1.2H36.13V-50H55.7v-1.2H36.13v-16.06h-1.2z" transform="rotate(90)"/>
+				<path fill="#0d539f" d="M46.38 32.97h5.13a2.27 2.27 0 1 1 0 4.55h-5.13a2.27 2.27 0 1 1 0-4.55z"/>
+				<g stroke-width="1.3" transform="matrix(.69052 -.1915 .1915 .69052 -31.22 54.29)">
+					<path fill="#5a5a5a" d="M158.3 84.16c-.46 1.7-5.85 1.69-12.02-.02-6.18-1.72-10.8-4.48-10.33-6.18l.31-1.12 22.36 6.2z"/>
+					<ellipse cx="163.44" cy="37.63" fill="#787878" rx="11.6" ry="3.2" transform="rotate(15.5)"/>
+					<path fill="none" stroke="#080000" stroke-linecap="round" stroke-width="1.76" d="m157.02 46.18-9.33 33.62"/>
+					<path fill="#7b7c81" d="M172.62 20.7h-35.3v-1.15c0-1.85 7.9-3.36 17.65-3.36 9.75 0 17.65 1.5 17.65 3.36z"/>
+					<ellipse cx="154.97" cy="20.7" fill="#98979c" rx="17.66" ry="3.36"/>
+					<path fill="#070e61" d="M171.93 20.95c0-1.68-7.62-3.04-17.03-3.04-9.4 0-17.03 1.36-17.03 3.04v29.56h34.06V20.95z"/>
+					<path fill="#0c549d" d="M154.9 17.9c-5.74 0-10.82.52-13.9 1.3V50.5h24.19V18.53a78.48 78.48 0 0 0-10.29-.63z"/>
+					<path fill="#1191d6" d="M153.46 17.92c-3.14.05-6.03.24-8.45.56V50.5h8.45z"/>
+					<path fill="#7b7c81" d="M172.62 50.51h-35.3v-1.15c0-1.85 7.9-3.35 17.65-3.35 9.75 0 17.65 1.5 17.65 3.35z"/>
+					<ellipse cx="154.97" cy="50.51" fill="#98979c" rx="17.66" ry="3.36"/>
+					<ellipse cx="154.94" cy="50.67" fill="#6a696d" rx="16.66" ry="2.85"/>
+					<ellipse cx="154.97" cy="50.54" fill="#e5e5e5" rx="15.98" ry="2.72"/>
+				</g>
+				<g transform="translate(3)">
+					<path fill="#5a5a5a" d="M19.34 81.43c0 1.26-3.72 2.29-8.3 2.29-4.6 0-8.32-1.03-8.32-2.3v-.83h16.62z"/>
+					<ellipse cx="11.03" cy="80.59" fill="#787878" rx="8.31" ry="2.29"/>
+					<path fill="none" stroke="#080000" stroke-linecap="round" stroke-width="1.26" d="M11.18 50.45v30"/>
+					<path fill="#7a7c83" d="M24.61 52.24c0 1.4-5.8 2.55-12.97 2.55-7.17 0-12.98-1.14-12.98-2.55v-.8h25.95Z"/>
+					<ellipse cx="11.64" cy="51.43" fill="#a9a9ac" rx="12.97" ry="2.55"/>
+					<path fill="#7a7c83" d="M24.61 42.43c0-1.4-5.8-2.55-12.97-2.55-7.17 0-12.98 1.14-12.98 2.55v.81h25.95Z"/>
+					<ellipse cx="11.64" cy="-43.24" fill="#a9a9ac" rx="12.97" ry="2.55" transform="scale(1 -1)"/>
+					<path fill="#061061" d="M23.75 51.41c0 1.2-5.44 2.16-12.16 2.16S-.57 52.6-.57 51.41v-8.1c0-1.2 5.44-2.17 12.16-2.17s12.16.97 12.16 2.16z"/>
+					<path fill="#0c549d" d="M11.59 41.14c-4.05 0-7.63.36-9.84.9v10.64c2.21.54 5.79.9 9.84.9 2.34 0 4.52-.13 6.37-.33V41.47a59.4 59.4 0 0 0-6.37-.33z"/>
+					<path fill="#148fda" d="M7.4 41.28c-.76.05-1.48.1-2.15.18v11.8c.67.07 1.39.13 2.14.18z"/>
+				</g>
+				<g stroke-width="1" transform="rotate(6.5 31.57 -1675.3) scale(.93194)">
+					<path fill="#bdbdbd" d="M253.17 19.4c0-2.46-7.28-4.45-16.27-4.45-8.98 0-16.27 2-16.27 4.46v1.24h32.54z"/>
+					<ellipse cx="236.9" cy="20.65" fill="#787c83" rx="16.27" ry="4.46"/>
+					<path fill="#070f61" d="M252.42 21.67c0-2.35-7-4.26-15.62-4.26s-15.62 1.9-15.62 4.26v14.48h31.24z"/>
+					<path fill="#0d559f" d="M236.8 17.4c-4.6 0-8.73.55-11.59 1.42v17.33h22.29V18.57a44.6 44.6 0 0 0-10.7-1.16z"/>
+					<path fill="#65696f" d="M249.96 19.38v16.77h.5V19.61l-.5-.23zm-26.41.04-.5.23v16.5h.5z"/>
+					<path fill="#148fda" d="M234.14 17.47c-2.16.1-4.17.32-5.93.64v18.04h5.93z"/>
+					<path fill="#bcbcc1" d="M253.17 35.18c0-2.47-7.28-4.46-16.27-4.46-8.98 0-16.27 2-16.27 4.46v1.24h32.54z"/>
+					<ellipse cx="236.9" cy="36.42" fill="#aaaaaf" rx="16.27" ry="4.46"/>
+					<ellipse cx="237.39" cy="36.75" fill="#5e5f61" rx="14.5" ry="4.03"/>
+					<ellipse cx="237.39" cy="36.54" fill="#dee1e5" rx="14.15" ry="3.83"/>
+				</g>
+				<g stroke-width="1.29" transform="scale(.7239) rotate(-6.5 792.22 -606.12)">
+					<path fill="#bdbdbd" d="M51.62-42.02c0-3.4-10.06-6.16-22.48-6.16-12.41 0-22.47 2.75-22.47 6.16v1.71h44.95Z"/>
+					<ellipse cx="29.14" cy="-40.31" fill="#787c83" rx="22.48" ry="6.16"/>
+					<path fill="#070f61" d="M50.57-38.9c0-3.25-9.66-5.89-21.57-5.89s-21.57 2.64-21.57 5.9v20h43.14Z"/>
+					<path fill="#0c549d" d="M29-44.79c-5.9 0-11.25.65-15.14 1.7v24.2h31.78v-23.75C41.7-43.95 35.7-44.8 29-44.8Z"/>
+					<path fill="#65696f" d="M12.57-42.7c-.27.08-.53.17-.78.27v23.54h.78zm34.72.7v23.1h.78v-22.75L47.3-42z"/>
+					<path fill="#148fda" d="M26.64-44.75c-2.99.1-5.79.35-8.28.74v25.12h8.28z"/>
+					<path fill="#bcbcc1" d="M51.62-20.24c0-3.4-10.06-6.16-22.48-6.16-12.41 0-22.47 2.76-22.47 6.16v1.72h44.95Z"/>
+					<ellipse cx="29.14" cy="-18.52" fill="#aaaaaf" rx="22.48" ry="6.16"/>
+					<ellipse cx="29.82" cy="-18.07" fill="#5e5f61" rx="20.04" ry="5.57"/>
+					<ellipse cx="29.82" cy="-18.35" fill="#dee1e5" rx="19.54" ry="5.29"/>
+				</g>
+				<circle cx="34.42" cy="46.55" r="1.4" fill="#0e519b"/>
+				<circle cx="63.98" cy="46.55" r="1.4" fill="#0e519b"/>
+				<circle cx="34.42" cy="78.86" r="1.4" fill="#0e519b"/>
+				<circle cx="63.98" cy="78.86" r="1.4" fill="#0e519b"/>
+				<circle cx="49.19" cy="62.53" r="22.05" fill="#e5453e"/>
+				<circle cx="49.19" cy="62.53" r="20.73" fill="#0d549d"/>
+				<circle cx="49.19" cy="62.53" r="19.84" fill="#aeafb2"/>
+				<circle cx="49.19" cy="62.53" r="18.61" fill="#e5e5e5"/>
+				<g transform="translate(45.88 .75)">
+					<path fill="#5a5a5a" d="M31.91 81.53c0 .89-2.63 1.62-5.88 1.62s-5.88-.73-5.88-1.62v-.82h11.76Z"/>
+					<ellipse cx="26.03" cy="80.71" fill="#787878" rx="5.88" ry="1.62"/>
+					<path fill="none" stroke="#080000" stroke-linecap="round" stroke-width="1.26" d="M26.18 15.66v64.8"/>
+					<ellipse cx="26.18" cy="17.87" fill="#daaa48" rx="11.08" ry=".88"/>
+					<path fill="#ead356" d="M26.1 15.97c-1.55 0-2.16.31-2.8.74-.48.33-.88.75-1.63.92l-.13.03c-.2.04-.4.06-.65.06h.5a4.82.33 0 0 0-.03.03 4.82.33 0 0 0 4.82.33 4.82.33 0 0 0 4.83-.33 4.82.33 0 0 0-.03-.03h.33c-.13 0-.25 0-.36-.02a4.82.33 0 0 0-.61-.12c-.64-.2-1-.57-1.45-.87-.64-.43-1.25-.74-2.8-.74z"/>
+				</g>
+				<g transform="translate(2.75 .63)">
+					<path fill="#5a5a5a" d="M31.91 81.53c0 .89-2.63 1.62-5.88 1.62s-5.88-.73-5.88-1.62v-.82h11.76Z"/>
+					<ellipse cx="26.03" cy="80.71" fill="#787878" rx="5.88" ry="1.62"/>
+					<path fill="none" stroke="#080000" stroke-linecap="round" stroke-width="1.26" d="M26.18 12.22v68.23"/>
+					<ellipse cx="26.18" cy="15.09" fill="#cd9b44" rx="14.56" ry="1.16"/>
+					<path fill="#dfb251" d="M26.07 12.6c-2.03 0-2.83.4-3.67.97-.64.43-1.16.98-2.15 1.21l-.17.04c-.25.05-.54.07-.86.07h.66a6.34.44 0 0 0-.04.05 6.34.44 0 0 0 6.34.43 6.34.44 0 0 0 6.34-.43 6.34.44 0 0 0-.03-.05h.43c-.17 0-.32 0-.47-.02a6.34.44 0 0 0-.8-.15c-.84-.26-1.32-.75-1.91-1.15-.83-.57-1.64-.97-3.67-.97z"/>
+				</g>
+				<path fill="#148fda" d="M46.25 33.37h2.39a1.08 1.08 0 1 1 0 2.16h-2.4a1.08 1.08 0 1 1 0-2.16z"/>
 			</g>
 		</defs>
 		<g id='ui'>
