--- a/Parcels, Paths and Patches.html
+++ b/Parcels, Paths and Patches.html
@@ -181,14 +181,13 @@
 				|| (i >= w	&& ((b.charCodeAt(i-w)-65) & 2) !== 0);
 		}
 
-		function pathFillsGrid(b, exc)
+		function pathFillsGrid(b, fn)
 		{
 			let good = Array(w*h).fill(false);
-			if (exc)
-				for (let ex of exc)
-					good[ex] = true;
 			for (let i = 0; i < w*h; i++)
 			{
+				if (fn && fn(i))
+					good[i] = true;
 				let v = b.charCodeAt(i) - 65;
 				if (i % w < w-1	&& (v & 1)) { good[i] = true; good[i + 1] = true; }
 				if (i < w*(h-1)	&& (v & 2)) { good[i] = true; good[i + w] = true; }
@@ -242,9 +241,9 @@
 		}
 
 		function sqxx(x)	{ return 400 + 100*x;	}
-		function sqx(i)	{ return sqxx(i%w);	}
+		function sqx(i)	{ return i < 0 ? 100 : sqxx(i%w);	}
 		function sqyy(y)	{ return 150 + 100*y;	}
-		function sqy(i)	{ return sqyy((i/w)|0);	}
+		function sqy(i)	{ return i < 0 ? 100 + 200*~i : sqyy((i/w)|0);	}
 		function edxx(i)	{ return i < 0 ? null : i < 10 ? i-1 : i < 20 ? 9 : i < 30 ? 29-i : i < 40 ? -1 : null;	}
 		function edyy(i)	{ return i < 0 ? null : i < 10 ? -1 : i < 20 ? i-11 : i < 30 ? 9 : i < 40 ? 39-i : null;	}
 		function edx(i)	{ let r = edxx(i); return r === null ? null : 400 + 100*r;	}
@@ -336,9 +335,9 @@
 					return joinSegments(sgm, c => `${sqxx(c%W)} ${sqyy((c/W)|0)}`);
 				}
 
-				async function makeItemWithLetter(t, id, x, y, ltr, attrs, cc, r)
+				async function makeItemWithLetter(t, id, x, y, ltr, attrs, u, cc, r)
 				{
-					let p = mk(id, 'g', { '*transform-origin': `${x+50} ${y+50}`, ...attrs }), hasLetter = !/^[_\s]*$/.test(ltr);
+					let p = mk(id, 'g', { '*transform-origin': `${x+50} ${y+50}`, ...attrs }, null, u), hasLetter = !/^[_\s]*$/.test(ltr);
 					let p2 = mk(`${id}-p2`, 'g', { '*transform-origin': `${x+50} ${y+50}` }, null, p);
 					let dic = { n: hasLetter ? '#nun-no-arms-1' : '#nun-template', d: '#drumkit', c: '#car' };
 					let nm = mk(`${id}-m`, 'use', { '*href': dic[t], '*transform': `translate(${x}, ${y})` }, null, p2);
@@ -400,7 +399,25 @@
 						if (v & 2)
 							sgm.push({ c: [i, i+w], d1: 0, d2: 2 });
 					}
-					return mk('loop', 'path', { fill: 'none', '*stroke': stroke ?? 'hsl(120, 60%, 75%)', 'stroke-width': 15, '*d': joinSegments(sgm, c => `${sqxx(c%w)+50} ${sqyy((c/w)|0)+50}`) });
+					return mk('loop', 'path', { fill: 'none', '*stroke': stroke, 'stroke-width': 15, '*d': joinSegments(sgm, c => `${sqxx(c%w)+50} ${sqyy((c/w)|0)+50}`) });
+				}
+
+				function makePathFollow(d, f, t)
+				{
+					if (!(f >= 0 && f < w*h && t >= 0 && t < w*h && f !== t) || d[f] === null || d[t] === null)
+						return [`M${sqx(f)+50} ${sqy(f)+50} ${sqx(t)+50} ${sqy(t)+50}`, null, null, null];
+					let s = `M${sqx(f)+50} ${sqy(f)+50}`, r = [-w, 1, w, -1], v = ['v-100', 'h100', 'v100', 'h-100'], n = 0, x1, y1, x2, y2;
+					while (f !== t)
+					{
+						n++;
+						x1 = f % w;
+						y1 = (f / w) | 0;
+						s += v[d[f]];
+						f += r[d[f]];
+						x2 = f % w;
+						y2 = (f / w) | 0;
+					}
+					return [s, n, (sqxx(x1) + sqxx(x2))/2+50, (sqyy(y1) + sqyy(y2))/2+50];
 				}
 
 				async function render(step)
@@ -550,9 +567,8 @@
 							break;
 
 						case 4:
-							let bt = makePath(state.steps[state.step-3].v.b, 'hsl(60, 30%, 40%)');
-							mk('loop-2', 'path', { d: bt.getAttribute('d'), stroke: 'hsl(0, 30%, 40%)', 'stroke-width': 15, 'stroke-dasharray': '20 20', fill: 'none' });
-							await makeItemWithLetter('c', 'c-e', 100, 100, '', {}, s.c.length);
+							let bt = makePath(state.steps[state.step-3].v.b, 'hsl(120, 15%, 40%)');
+							await makeItemWithLetter('c', 'c-e', 100, 100, '', {}, vis, s.c.length);
 							for (let i = 0; i < s.c.length; i++)
 							{
 								if (s.c[i].i !== -1 && mouseI !== i)
@@ -561,7 +577,7 @@
 									while (x >= 0 && x < w && y >= 0 && y < h && !sc.n.includes(x+w*y) && !sc.d.includes(x+w*y)) { x += dx; y += dy; }
 									mk(`c-${i}-a`, 'path', { opacity: .5, stroke: `hsl(${ccs[i%9]}, 80%, 80%)`, 'stroke-width': 25, '*d': `M${edx(s.c[i].i)+50} ${edy(s.c[i].i)+50} ${sqxx(x)+50} ${sqyy(y)+50}`, 'marker-end': 'url(#arrow-marker)' });
 								}
-								await makeItemWithLetter('c', `c-${i}`, edx(s.c[i].i) ?? 100, edy(s.c[i].i) ?? 100, '', { '*class': `movable${mouseI === i ? ' sel' : ''}` }, i, s.c[i].r);
+								await makeItemWithLetter('c', `c-${i}`, edx(s.c[i].i) ?? 100, edy(s.c[i].i) ?? 100, '', { '*class': `movable${mouseI === i ? ' sel' : ''}` }, vis, i, s.c[i].r);
 							}
 							for (let i = 0; i < sc.n.length; i++)
 								await makeItemWithLetter('n', `n-${i}-t`, sqx(sc.n[i]), sqy(sc.n[i]), sc.l[i]);
@@ -569,12 +585,12 @@
 								await makeItemWithLetter('d', `d-${i}-t`, sqx(sc.d[i]), sqy(sc.d[i]));
 							break;
 
-						case 26: // move & ltrs
+						case 26:
 							mk('frame1', 'path', { d: 'M400 150h900v900h-900z', fill: 'none', stroke: 'hsl(220, 20%, 75%)', 'stroke-width': 6 });
 							if (sc.f)
 								mk('frame2', 'path', { fill: 'none', stroke: 'hsl(220, 20%, 75%)', 'stroke-width': 4, d: () => generatePatches(state.steps[state.step-2].b) });
-							if (sc.p)
-								makePath(state.steps[step-1].v.b);
+							if ('p' in sc)
+								makePath(state.steps[step-sc.p].v.b, 'hsl(120, 15%, 40%)');
 							if (sc.z)
 							{
 								for (let x = 0; x < w; x++)
@@ -583,21 +599,39 @@
 									mk(`rh-${y}`, 'text', { y: sqyy(y)+55, x: 385, 'font-size': 32, 'font-family': 'Proxima', 'text-anchor': 'end', fill: 'hsl(220, 15%, 60%)' }, [y + 1]);
 							}
 
+							// muted froms
+							// arrows except sel
+							// arrow sel
+							// tos except sel
+							// to sel
+							// sel decor
+							let g = Array(6).fill(null).map((_, ix) => mk(`g${ix}`, 'g'));
 							for (let ai = 0, k = 0; k < sc.a.length; ai += sc[sc.a[k]].length, k++)
 								for (let i = 0, cn = sc[sc.a[k]], n = s[sc.a[k]]; i < cn.length; i++)
 								{
-									let cx = cn[i] < 0 ? 100 : sqx(cn[i]), cy = cn[i] < 0 ? 100 + 200*~cn[i] : sqy(cn[i]), dx = cx, dy = cy, l = (s.l ?? sc.l)[ai+i];
+									let cx = sqx(cn[i]), cy = sqy(cn[i]);
+									let dx = cx, dy = cy, l = (s.l ?? sc.l)[ai+i], sel = mouseK === sc.a[k] && mouseI === i;
 									if (n && n[i] !== cn[i])
 									{
-										await makeItemWithLetter(sc.a[k], `${sc.a[k]}-${i}-f`, cx, cy, l, { opacity: .25 });
-										dx = n[i] < 0 ? 100 : sqx(n[i]); dy = n[i] < 0 ? 100 + 200*~n[i] : sqy(n[i]);
-										mk(`${sc.a[k]}-${i}-a`, 'path', { '*d': `M${cx+50} ${cy+50} ${dx+50} ${dy+50}`, stroke: 'hsl(220, 20%, 80%)', 'stroke-width': '30', opacity: .2, fill: 'none', 'marker-end': 'url(#arrow-marker)' });
+										await makeItemWithLetter(sc.a[k], `${sc.a[k]}-${i}-f`, cx, cy, l, { opacity: .25 }, g[0]);
+										dx = sqx(n[i]); dy = sqy(n[i]);
+										let d = `M${cx+50} ${cy+50} ${dx+50} ${dy+50}`, c, x, y;
+										if (sc.w && sel)
+											[d, c, x, y] = makePathFollow(sc.w, cn[i], n[i]);
+										mk(`${sc.a[k]}-${i}-a`, 'path', { '*d': d, 'stroke-width': '30', fill: 'none', 'marker-end': 'url(#arrow-marker)',
+											'*stroke':	sel ? 'hsl(120, 80%, 80%)' : 'hsl(220, 20%, 80%)',
+											'*opacity':	sel ? .7 : .2 }, null, g[sel ? 2 : 1]);
+										if (c !== null && sel)
+										{
+											mk(`${sc.a[k]}-${i}-o`, 'rect', { '*x': x-25, '*y': y-25, rx: 20, ry: 20, width: 50, height: 50, fill: 'white', stroke: 'black', 'stroke-width': 5 }, null, g[5]);
+											mk(`${sc.a[k]}-${i}-n`, 'text', { '*x': x, '*y': y+13, 'font-family': 'Proxima', 'font-size': 38, fill: 'black', 'text-anchor': 'middle' }, [c], g[5]);
+										}
 									}
-									await makeItemWithLetter(sc.a[k], `${sc.a[k]}-${i}-t`, dx, dy, l, { 'class': 'movable' });
+									await makeItemWithLetter(sc.a[k], `${sc.a[k]}-${i}-t`, dx, dy, l, { 'class': 'movable' }, g[sel ? 4 : 3]);
 								}
 							break;
 
-						case 42: // paths
+						case 42:
 							mk('frame1', 'path', { d: 'M400 150h900v900h-900z', fill: 'none', stroke: 'hsl(220, 20%, 75%)', 'stroke-width': 6 });
 							if (sc.b)
 								mk('frame2', 'path', { fill: 'none', stroke: 'hsl(220, 20%, 75%)', 'stroke-width': 4, d: () => generatePatches(sc.b) });
@@ -611,9 +645,9 @@
 									sgm.push({ c: [i, i+w], d1: 0, d2: 2 });
 							}
 							mk('loop', 'path', { fill: 'none', '*stroke': 'hsl(120, 60%, 75%)', 'stroke-width': 15, '*d': joinSegments(sgm, c => `${sqxx(c%w)+50} ${sqyy((c/w)|0)+50}`) });
-							if (sc.n)
-								for (let i = 0; i < sc.n.length; i++)
-									await makeItemWithLetter('n', `n-${i}-t`, sqx(sc.n[i]), sqy(sc.n[i]), sc.l[i]);
+							for (let k = 0, ai = 0; k < sc.a.length; ai += sc[sc.a[k]].length, k++)
+								for (let i = 0, n = sc[sc.a[k]]; i < n.length; i++)
+									await makeItemWithLetter(sc.a[k], `${sc.a[k]}-${i}-t`, sqx(n[i]), sqy(n[i]), sc.l[ai+i]);
 
 							if (sc.subtype === 1)
 							{
@@ -649,7 +683,7 @@
 							}
 							break;
 
-						case 47: // momentous occasion
+						case 47:
 							await render(step - 1);
 							let mIx = state.steps.slice(0, step).filter(sp => sp.type === 47).length;
 							mk(`mom-${mIx}-r`, '*path', { d: `M${350 + 250*mIx} 1225h250v250h-250z`, fill: 'hsl(38, 100%, 40%)', 'fill-opacity': .5, stroke: 'hsl(38, 85%, 70%)', 'stroke-width': 10, 'paint-order': 'stroke' });
@@ -705,7 +739,8 @@
 					case 42:
 						setupGridInput((x, y) => x >= 0 && x < w && y >= 0 && y < h);
 						showCheckBtn =	sc.subtype === 0 ? pathFillsGrid(s.b) :
-							sc.subtype === 1 ? pathFillsGrid(s.b, [...sc.n, ...s.d]) :
+							sc.subtype === 1 ? pathFillsGrid(s.b, c => sc.n.includes(c) || s.d.includes(c)) :
+							sc.subtype === 2 ? pathFillsGrid(s.b, c => [sc.n, sc.d, sc.c].every(ar => !ar.includes(c))) :
 							false;
 						break;
 				}
@@ -723,39 +758,35 @@
 				// Steps bar
 				if (state.steps.length > 1)
 				{
-					mk('steps-bar', 'path', { fill: 'hsl(220, 10%, 20%)', d: 'M1450 0h1222v150H1450z' });
+					mk('steps-bar', 'path', { fill: 'hsl(220, 10%, 20%)', d: 'M1450 0h1222v100H1450z' });
 					for (let i = 0; i < state.steps.length; i++)
 					{
-						mk(`step-${i}-btn`, 'g', { '*class': `step-btn${i === state.step ? ' sel' : ''}`, 'transform-origin': `${1500 + 65*i} 75` }, `
-							<circle cx='${1500 + 65*i}' cy='75' r='35' style='fill: hsl(var(--hue), 50%, 40%)' />
-							<circle cx='${1500 + 65*i}' cy='75' r='23' style='fill: hsl(var(--hue), 60%, 80%)' />
-							<circle cx='${1500 + 65*i}' cy='75' r='13' style='fill: hsl(var(--hue), 50%, 30%)' />`, input);
+						mk(`step-${i}-btn`, 'g', { '*class': `step-btn${i === state.step ? ' sel' : ''}`, 'transform-origin': `${1490 + 60*i} 75` }, `
+							<circle cx='${1490 + 60*i}' cy='50' r='30' style='fill: hsl(var(--hue), 50%, 40%)' />
+							<circle cx='${1490 + 60*i}' cy='50' r='20' style='fill: hsl(var(--hue), 60%, 80%)' />
+							<circle cx='${1490 + 60*i}' cy='50' r='10' style='fill: hsl(var(--hue), 50%, 30%)' />`, input);
 						document.getElementById(`step-${i}-btn`).onclick = (st => async () => { state.step = st; setupStep(...await loadStep(st)); })(i);
 					}
 				}
 
-				let thLater = [];
+				let th1 = mk('th1', 'g'), th2 = mk('th2', 'g');
 				for (let thIx = 0; thIx < stepsWithThumbnails.length; thIx++)
 					if (state.step >= stepsWithThumbnails[thIx])
 					{
-						let	th = stepsWithThumbnails[thIx], mx = 850, my = 600, tx = 1600, ty = 300 + 250*thIx, x1 = 375, y1 = 125, x2 = x1+950, y2 = y1+950, f = thIx === 3 ? 11 : 9;
+						let	th = stepsWithThumbnails[thIx], mx = 850, my = 600, tx = 1600, ty = 250 + 250*thIx, x1 = 375, y1 = 125, x2 = x1+950, y2 = y1+950, f = thIx === 3 ? 11 : 9;
 						if (thIx === 3) { x1 -= 100; y1 -= 100; x2 += 100; y2 += 100; }
 						let x3 = (x1-mx)*2/f+tx, y3 = (y1-my)*2/f+ty, x4 = (x2-mx)*2/f+tx, y4 = (y2-my)*2/f+ty;
 						let g = mk(`thumbnail-${th}`, 'g', { 'class': 'thumbnail', transform:
-							`translate(${tx}, ${ty}) scale(${2/f}) translate(${-mx}, ${-my})` });
+							`translate(${tx}, ${ty}) scale(${2/f}) translate(${-mx}, ${-my})` }, null, th1);
 						mk(`thumbnail-${th}-r`, 'g', { }, await doFetch(thumbnailUrl(th)), g);
-						thLater.push(() =>
-						{
-							mk(`show-thumbnail-${th}`, 'g', { style: `opacity: 0; transition: opacity .147s, transform .347s; transform: scale(.9); transform-origin: ${(x3+x4)/2}px ${(y3+y4)/2}px;`, 'data-transform': `scale(.9)` }, `
-								<use	opacity='.5'	href='#thumbnail-${th}-r' />
-								<path	opacity='.2'	d='M${x1} ${y1} ${x3} ${y3} ${x3} ${y4} ${x1} ${y2}z'	fill='white'	/> <!-- left -->
-								<path	opacity='.2'	d='M${x2} ${y1} ${x4} ${y3} ${x4} ${y4} ${x2} ${y2}z'	fill='white'	/> <!-- right -->
-								<path	opacity='.3'	d='M${x1} ${y1} ${x2} ${y1} ${x4} ${y3} ${x3} ${y3}z'	fill='white'	/> <!-- top -->
-								<path	opacity='.3'	d='M${x1} ${y2} ${x3} ${y4} ${x4} ${y4} ${x2} ${y2}z'	fill='white'	/> <!-- bottom -->
-							`);
-						});
+						mk(`show-thumbnail-${th}`, 'g', { style: `opacity: 0; transition: opacity .147s, transform .347s; transform: scale(.9); transform-origin: ${(x3+x4)/2}px ${(y3+y4)/2}px;`, 'data-transform': `scale(.9)` }, `
+							<use	opacity='.5'	href='#thumbnail-${th}-r' />
+							<path	opacity='.2'	d='M${x1} ${y1} ${x3} ${y3} ${x3} ${y4} ${x1} ${y2}z'	fill='white'	/> <!-- left -->
+							<path	opacity='.2'	d='M${x2} ${y1} ${x4} ${y3} ${x4} ${y4} ${x2} ${y2}z'	fill='white'	/> <!-- right -->
+							<path	opacity='.3'	d='M${x1} ${y1} ${x2} ${y1} ${x4} ${y3} ${x3} ${y3}z'	fill='white'	/> <!-- top -->
+							<path	opacity='.3'	d='M${x1} ${y2} ${x3} ${y4} ${x4} ${y4} ${x2} ${y2}z'	fill='white'	/> <!-- bottom -->
+						`, th2);
 					}
-				for (let thl of thLater) thl();
 
 				for (let obj of Array.from(document.querySelectorAll('#vis *,#input *')))
 					if (obj.id && !updated.has(obj.id) && !obj.classList.contains('nd'))
@@ -962,7 +993,7 @@
 					re.setAttribute('fill', 'white');
 					await coroutine('swoop-thumbnail', [
 						{ d: .47, v: { o: [1, 0] }, e: Easing.OutQuart, fn: t => { re.setAttribute('fill-opacity', t.o); } },
-						{ d: .87, v: { x: [850, 1600], y: [600, 300 + 250*thIx], s: [1, 2/(thIx === 3 ? 11 : 9)] }, e: Easing.OutQuart,
+						{ d: .87, v: { x: [850, 1600], y: [600, 250 + 250*thIx], s: [1, 2/(thIx === 3 ? 11 : 9)] }, e: Easing.OutQuart,
 							fn: t => { tt.setAttribute('transform', `translate(${t.x}, ${t.y}) scale(${t.s}) translate(-850, -600)`); } }
 					]);
 				}
@@ -1168,10 +1199,14 @@
 
 			function get(s, sc, i)
 			{
+				let q = [-1, null, -1, -1];
 				for (let j = 0, ad = 0, ii = 0; j < sc.a.length; j++)
-					if ((ii = (s[sc.a[j]] ?? sc[sc.a[j]]).indexOf(i)) >= 0) return [j, sc.a[j], ii + ad, ii];
-					else ad += sc[sc.a[j]].length;
-				return [-1, null, -1, -1];
+				{
+					if ((ii = (s[sc.a[j]] ?? sc[sc.a[j]]).lastIndexOf(i)) >= 0)
+						q = [j, sc.a[j], ii + ad, ii];
+					ad += sc[sc.a[j]].length;
+				}
+				return q;
 			}
 
 			async function click(x, y, e, btns)
@@ -1357,7 +1392,7 @@
 						break;
 
 					case 26:
-						if (btns & 1)
+						if ((btns & 1) && mouseK !== null)
 							s[mouseK][mouseI] = i;
 						break;
 
@@ -1855,7 +1890,7 @@
 			</g>
 		</g>
 		<g id='vis'></g>
-		<foreignObject x='1750' y='150' width='922' height='1353'>
+		<foreignObject x='1750' y='100' width='922' height='1403'>
 			<div xmlns="http://www.w3.org/1999/xhtml" id='div'></div>
 		</foreignObject>
 		<g id='input'></g>
