--- a/Parcels, Paths and Patches.html
+++ b/Parcels, Paths and Patches.html
@@ -298,6 +298,19 @@
 					return make(id, elemName, attrs, content, parent);
 				}
 
+				function mkArrow(id, pts, c, sw, attrs, p)
+				{
+					let g = mk(id, 'g', attrs, null, p), p1 = pts[pts.length-2], p2 = pts[pts.length-1], a = Math.atan2(p2[1]-p1[1], p2[0]-p1[0])*180/Math.PI;
+					let x = mk(`${id}-p`, '*path', { 'd': `M${pts.map(p => `${p[0]} ${p[1]}`).join(' ')}`, 'stroke-width': sw, fill: 'none' }, null, g);
+					let y = mk(`${id}-h`, '*path', { 'd': 'M-.2 0-1.6 .7V-.7z', transform: `translate(${p2[0]} ${p2[1]}) rotate(${a}) scale(${2*sw}) translate(.7 0)` }, null, g);
+					if (c !== undefined && c !== null)
+					{
+						x.setAttribute('stroke', c);
+						y.setAttribute('fill', c);
+					}
+					return g;
+				}
+
 				vis.removeAttribute('transform');
 
 				// Grid
@@ -418,16 +431,12 @@
 				{
 					if (!(f >= 0 && f < w*h && t >= 0 && t < w*h && f !== t) || d[f] === null || d[t] === null)
 						return [`M${sqx(f)+50} ${sqy(f)+50} ${sqx(t)+50} ${sqy(t)+50}`, null, null, null];
-					let s = `M${sqx(f)+50} ${sqy(f)+50}`, r = [-w, 1, w, -1], v = ['v-100', 'h100', 'v100', 'h-100'], n = 0, x1, y1, x2, y2;
+					let s = [sqx(f)+50, sqy(f)+50], r = [-w, 1, w, -1], n = 0;
 					while (f !== t)
 					{
 						n++;
-						x1 = f % w;
-						y1 = (f / w) | 0;
-						s += v[d[f]];
 						f += r[d[f]];
-						x2 = f % w;
-						y2 = (f / w) | 0;
+						s.push([sqx(f)+50, sqy(f)+50]);
 					}
 					return [s, n, (sqxx(x1) + sqxx(x2))/2+50, (sqyy(y1) + sqyy(y2))/2+50];
 				}
@@ -480,23 +489,22 @@
 							mk('frame1', 'path', { d: 'M400 150h900v900h-900z', fill: 'none', stroke: 'hsl(220, 20%, 75%)', 'stroke-width': 6 });
 							for (let i = 0; i < sc.n.length; i++)
 							{
-								let a = 'M', q = '', al = [];
+								let a = [], q = '';
 								let g = mk(`ar-${i}-g`, 'g', { '*class': `ar${s.m.includes(i) ? ' u' : ''}`, transform: `translate(${t3as[i]}) scale(100)` });
-								followPathXY(0, 0, sc.m[i], (x, y) => { a += ` ${x} ${y}`; q += `M${x-.49} ${y-.49}h.98v.98h-.98z`; al.push([x, y]); });
+								followPathXY(0, 0, sc.m[i], (x, y) => { a.push([x, y]); q += `M${x-.47} ${y-.47}h.94v.94h-.94z`; });
 								mk(`ar-${i}-q`, 'path', { 'class': 'q', 'd': q }, null, g);
-								mk(`ar-${i}-a`, 'path', { 'class': 'a', 'd': a }, null, g);
-								mk(`ar-${i}-t`, 'text', { x: al[al.length >> 1][0], y: al[al.length >> 1][1]+.35 }, ['✓'], g);
+								mkArrow(`ar-${i}-a`, a, null, .3, { 'class': 'a' }, g);
+								mk(`ar-${i}-t`, 'text', { x: a[a.length >> 1][0], y: a[a.length >> 1][1]+.35 }, ['✓'], g);
 							}
 							for (let i = 0; i < sc.n.length; i++)
 							{
-								let fi = sc.n[i], ar = 'M';
+								let fi = sc.n[i], ar = [];
 								if (s.m[i] !== null)
 								{
 									await makeItemWithLetter('n', `n-${i}-f`, sqx(fi), sqy(fi), s.l[i], { opacity: .25 });
-									fi = followPathI(fi, sc.m[s.m[i]], j => { ar += ` ${sqx(j)+50} ${sqy(j)+50}`; });
-									mk(`n-${i}-a`, 'path', { '*d': ar, fill: 'none', stroke: 'hsl(220, 20%, 80%)', 'stroke-width': '30', opacity: .2, 'marker-end': 'url(#arrow-marker)' });
+									fi = followPathI(fi, sc.m[s.m[i]], j => { ar.push([sqx(j)+50, sqy(j)+50]); });
+									mkArrow(`n-${i}-a`, ar, 'hsl(220, 20%, 80%)', 30, { opacity: .2 });
 								}
-								// (t, id, x, y, ltr, attrs, cc, r)
 								await makeItemWithLetter('n', `n-${i}-t`, sqx(fi), sqy(fi), s.l[i],
 									{ 'class': 'movable', '*transform-origin': `${sqx(fi)+50} ${sqy(fi)+50}` });
 								if (s.k[i] !== null)
@@ -594,7 +602,7 @@
 								{
 									let r = s.c[i].r, dx = [0, 1, 1, 1, 0, -1, -1, -1][r], dy = [-1, -1, 0, 1, 1, 1, 0, -1][r], x = edxx(s.c[i].i)+dx, y = edyy(s.c[i].i)+dy;
 									while (x >= 0 && x < w && y >= 0 && y < h && !sc.n.includes(x+w*y) && !sc.d.includes(x+w*y)) { x += dx; y += dy; }
-									mk(`c-${i}-a`, 'path', { opacity: .5, stroke: `hsl(${ccs[i%9]}, 80%, 80%)`, 'stroke-width': 25, '*d': `M${edx(s.c[i].i)+50} ${edy(s.c[i].i)+50} ${sqxx(x)+50} ${sqyy(y)+50}`, 'marker-end': 'url(#arrow-marker)' });
+									mkArrow(`c-${i}-a`, [[edx(s.c[i].i)+50, edy(s.c[i].i)+50], [sqxx(x)+50, sqyy(y)+50]], `hsl(${ccs[i%9]}, 80%, 80%)`, 25, { opacity: .5 });
 								}
 								await makeItemWithLetter('c', `c-${i}`, edx(s.c[i].i) ?? 100, edy(s.c[i].i) ?? 100, '', { '*class': `movable${mouseI === i ? ' sel' : ''}` }, vis, i, s.c[i].r);
 							}
@@ -628,12 +636,10 @@
 									{
 										await makeItemWithLetter(sc.a[k], `${sc.a[k]}-${i}-f`, cx, cy, l, { opacity: .25 }, g[0]);
 										dx = sqx(n[i]); dy = sqy(n[i]);
-										let d = `M${cx+50} ${cy+50} ${dx+50} ${dy+50}`, c = null, x, y;
+										let d = [[cx+50, cy+50], [dx+50, dy+50]], c = null, x, y;
 										if (sc.w && sel)
 											[d, c, x, y] = makePathFollow(sc.w, cn[i], n[i]);
-										mk(`${sc.a[k]}-${i}-a`, 'path', { '*d': d, 'stroke-width': '30', fill: 'none', 'marker-end': 'url(#arrow-marker)',
-											'*stroke':	sel ? 'hsl(120, 80%, 80%)' : 'hsl(220, 20%, 80%)',
-											'*opacity':	sel ? .7 : .2 }, null, g[sel ? 3 : 1]);
+										mkArrow(`${sc.a[k]}-${i}-a`, d, sel ? 'hsl(120, 80%, 80%)' : 'hsl(220, 20%, 80%)', 30, { opacity: sel ? .7 : .2 }, g[sel ? 3 : 1]);
 										if (c !== null && sel)
 										{
 											mk(`${sc.a[k]}-${i}-o`, 'rect', { '*x': x-25, '*y': y-25, rx: 20, ry: 20, width: 50, height: 50, fill: 'white', stroke: 'black', 'stroke-width': 5 }, null, g[5]);
@@ -674,10 +680,10 @@
 									switch (s.r[ni])
 									{
 										case '?': mk(`n-${ni}-yrq`, 'text', { 'class': 'q', x: x+75, y: y+90, '*transform-origin': `${x+75} ${y+90}`, 'font-size': 60, 'font-family': 'Work Sans', 'font-weight': 700 }, ['?']); break;
-										case '0': mk(`n-${ni}-yr`, 'path', { '*d': `M${x+80} ${y+80}v-60`,	stroke: 'white', 'stroke-width': 5, 'marker-end': 'url(#arrow-marker)' }); break;
-										case '1': mk(`n-${ni}-yr`, 'path', { '*d': `M${x+20} ${y+80}h60`,	stroke: 'white', 'stroke-width': 5, 'marker-end': 'url(#arrow-marker)' }); break;
-										case '2': mk(`n-${ni}-yr`, 'path', { '*d': `M${x+20} ${y+20}v60`,	stroke: 'white', 'stroke-width': 5, 'marker-end': 'url(#arrow-marker)' }); break;
-										case '3': mk(`n-${ni}-yr`, 'path', { '*d': `M${x+80} ${y+80}h-60`,	stroke: 'white', 'stroke-width': 5, 'marker-end': 'url(#arrow-marker)' }); break;
+										case '0': mkArrow(`n-${ni}-yr`, [[x+80, y+80], [x+80, y+20]], 'white', 5); break;
+										case '1': mkArrow(`n-${ni}-yr`, [[x+20, y+80], [x+80, y+80]], 'white', 5); break;
+										case '2': mkArrow(`n-${ni}-yr`, [[x+20, y+20], [x+20, y+80]], 'white', 5); break;
+										case '3': mkArrow(`n-${ni}-yr`, [[x+80, y+80], [x+20, y+80]], 'white', 5); break;
 									}
 									switch (s.a[ni])
 									{
@@ -793,7 +799,7 @@
 							<circle cx='${1490 + 54.5*i}' cy='50' r='30' style='fill: hsl(var(--hue), 50%, 40%)' />
 							<circle cx='${1490 + 54.5*i}' cy='50' r='20' style='fill: hsl(var(--hue), 60%, 80%)' />
 							<circle cx='${1490 + 54.5*i}' cy='50' r='10' style='fill: hsl(var(--hue), 50%, 30%)' />`, input);
-						document.getElementById(`step-${i}-btn`).onclick = (st => async () => { state.step = st; await setupStep(...await loadStep(st)); })(i);
+						document.getElementById(`step-${i}-btn`).onclick = (st => async () => { state.step = st; await setupStepMaybe(await loadStep(st)); })(i);
 					}
 				}
 
@@ -857,8 +863,8 @@
 							for (let i = 0; i < tn; i++)
 							{
 								let dt = make(null, 'circle', { r: 4, fill: `hsl(${rh}, 100%, ${rl}%)`, 'class': 'nd' }, p);
-								let ux = tx + tr*cos((ea-sa)*i/(tn-1));// + Math.random()*20 - 10;
-								let uy = ty + tr*sin((ea-sa)*i/(tn-1));// + Math.random()*20 - 10;
+								let ux = tx + tr*cos((ea-sa)*i/(tn-1)) + Math.random()*20 - 10;
+								let uy = ty + tr*sin((ea-sa)*i/(tn-1)) + Math.random()*20 - 10;
 								let vt = ut + Math.random()*.4-.2;
 								coroutine(null, [
 									{ d: vt, v: { x: [tx, tx+tr*cos((ea-sa)*i/(tn-1))], t: [0, vt], o: [1, 0] }, fn: t => {
@@ -875,6 +881,12 @@
 					]);
 					await coroutine(null, [{ d: Math.random()*.47 + .147 }]);
 				}
+			}
+
+			async function setupStepMaybe(arr)
+			{
+				if (Array.isArray(arr))
+					await setupStep(...arr);
 			}
 
 			async function setupStep(step, json, html)
@@ -995,7 +1007,7 @@
 			async function checkBtnPress()
 			{
 				if (state.step < state.steps.length-1)
-					return await setupStep(...await loadStep(state.step + 1));
+					return await setupStepMaybe(await loadStep(state.step + 1));
 
 				if (inputBlocked)
 					return false;
@@ -1193,7 +1205,7 @@
 				await setupStep(...result);
 			}
 
-			await setupStep(...await loadStep(state.step ?? 0));
+			await setupStepMaybe(await loadStep(state.step ?? 0));
 
 			document.body.addEventListener('keydown', async function(e)
 			{
@@ -1770,7 +1782,7 @@
 			{
 				fetchCache = {};
 				state.steps.splice(state.step);
-				await setupStep(...await loadStep(state.step));
+				await setupStepMaybe(await loadStep(state.step));
 			};
 
 			document.addEventListener('paste', async function(e)
@@ -1782,7 +1794,7 @@
 						if ('steps' in j && 'step' in j)
 						{
 							state = { steps: j.steps, step: j.step };
-							await setupStep(...await loadStep(state.step));
+							await setupStepMaybe(await loadStep(state.step));
 						}
 					}
 					catch {}
@@ -1804,9 +1816,6 @@
 			<filter id="shadow" x="-100%" y="-100%" width='200%' height='200%' filterUnits="userSpaceOnUse">
 				<feDropShadow stdDeviation="10" />
 			</filter>
-			<marker overflow='visible' id='arrow-marker' orient='auto-start-reverse'>
-				<path fill='context-stroke' stroke='context-stroke' d='M-.2 0-1.6 .7V-.7z' />
-			</marker>
 			<g id='nun-template'>
 				<g transform='scale(.02) translate(1142, -200)'>
 					<path fill="#8b5d38"	d="m2419 2886c0 13.8-2 128-2.9 141-.2 2.7-1.2 6 1 8.2 159 212 96.4 414-25.9 461-102 38.9-201-49.1-221-156-3.6 1.2-6.7 3.3-10.1 5-30.5 15.3-66.4 15.4-92.5-6.8-34.9-29.8-39.9-89.6-27.4-135 17.8-64.6 68.8-119 121-160 .4-10.6-.2-121-.2-132 19-2.3 38-3.9 57.1-5.8 11.2-1.1 22.3-3.3 33.6-3.1-7 1.2-14.1 1.3-21.1 2.4.3 5.6.5 111 .5 117 26.1-2.2 103-9.6 116-11.2.3-5.7.7-111 1.4-117-9.3-.4-18.5 2.2-27.8 2.1 5.1-1 1.6-.9 98-9.6z" />
